data/derived/sp14/progs/unify/prog0882.ml.out
Characters 8-13:
  let _ = [1;5] [1;5];;
          ^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
